@@ -27,6 +27,26 @@ begin_import
 import|import
 name|java
 operator|.
+name|io
+operator|.
+name|FileOutputStream
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|PrintWriter
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|Arrays
@@ -420,9 +440,17 @@ name|cachepath
 init|=
 name|OptionBuilder
 operator|.
+name|withArgName
+argument_list|(
+literal|"cachepathfile"
+argument_list|)
+operator|.
+name|hasArg
+argument_list|()
+operator|.
 name|withDescription
 argument_list|(
-literal|"outputs a classpath consisting of all dependencies in cache (including transitive ones) of the given ivy file"
+literal|"outputs a classpath consisting of all dependencies in cache (including transitive ones) of the given ivy file to the given cachepathfile"
 argument_list|)
 operator|.
 name|create
@@ -1450,6 +1478,15 @@ argument_list|,
 name|md
 argument_list|,
 name|confs
+argument_list|,
+name|line
+operator|.
+name|getOptionValue
+argument_list|(
+literal|"cachepath"
+argument_list|,
+literal|"ivycachepath.txt"
+argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
@@ -1642,6 +1679,9 @@ parameter_list|,
 name|String
 index|[]
 name|confs
+parameter_list|,
+name|String
+name|outFile
 parameter_list|)
 block|{
 try|try
@@ -1793,9 +1833,20 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
-name|System
-operator|.
-name|out
+name|PrintWriter
+name|writer
+init|=
+operator|new
+name|PrintWriter
+argument_list|(
+operator|new
+name|FileOutputStream
+argument_list|(
+name|outFile
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|writer
 operator|.
 name|println
 argument_list|(
@@ -1803,6 +1854,22 @@ name|buf
 operator|.
 name|toString
 argument_list|()
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"cachepath output to "
+operator|+
+name|outFile
 argument_list|)
 expr_stmt|;
 block|}
